@@ -3,16 +3,15 @@ package com.extract.util;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.nio.charset.StandardCharsets;
 
-public class CmdUtil {
+public class ProcessBulderUtil {
 
-    public String exec(String cmd) {
+    public String exec(String[] cmd) {
         String result = "";
         Process process = null;
         BufferedReader reader = null;
         try {
-            process = Runtime.getRuntime().exec("cmd /c " + cmd);
+            process = new ProcessBuilder(cmd).start();
             reader = new BufferedReader(new InputStreamReader(process.getInputStream(), "MS949"));
             String line = null;
             StringBuffer sb = new StringBuffer();
@@ -33,9 +32,10 @@ public class CmdUtil {
         return result;
     }
 
-    /*public static void main(String[] args) {
-        CmdUtil cmdUtil = new CmdUtil();
-        String result = cmdUtil.exec("git status");
-        System.out.println(result);
+    /*public static void main(String[] args) throws IOException {
+        String[] cmd = new String[] {"cmd", "/c", "dir"};
+        ProcessBulderUtil processBulderUtil = new ProcessBulderUtil();
+        String exec = processBulderUtil.exec(cmd);
+        System.out.println("exec = " + exec);
     }*/
 }
